# QtDemo

./: .gitignore  Battery.cpp  Battery.h  CMakeLists.txt  ColorPicker.cpp  ColorPicker.h  GifCapture.cpp  GifCapture.h  Marquee.cpp  Marquee.h  MenuSwitcher.cpp  MenuSwitcher.h  PageSwitcher.cpp  PageSwitcher.h  README.md  ScrollText.cpp  ScrollText.h  SphericalProgressBar.cpp  SphericalProgressBar.h  SwitchButton.cpp  SwitchButton.h  graphicseffect.cpp  graphicseffect.h  graphicseffect.ui  iplineedit.cpp  iplineedit.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
MovableTableView/: MovableTableView.cpp  MovableTableView.h
SketchBoard/: SketchBoard.h
